--- a/requirements.txt
+++ b/requirements.txt
@@ -1,6 +1,7 @@
 aiofiles==23.2.1
 annotated-types==0.7.0
 anyio==4.8.0
+black==25.11.0
 certifi==2024.12.14
 charset-normalizer==3.4.1
 click==8.1.8
@@ -24,11 +25,14 @@ Jinja2==3.1.5
 markdown-it-py==3.0.0
 MarkupSafe==2.1.5
 mdurl==0.1.2
+mypy_extensions==1.1.0
 numpy==2.2.1
 orjson==3.10.14
 packaging==24.2
 pandas==2.2.3
+pathspec==0.12.1
 pillow==11.1.0
+platformdirs==4.5.0
 PyAudio==0.2.14
 pydantic==2.10.5
 pydantic_core==2.27.2
@@ -37,6 +41,7 @@ Pygments==2.19.1
 python-dateutil==2.9.0.post0
 python-dotenv==1.2.1
 python-multipart==0.0.20
+pytokens==0.3.0
 pytz==2024.2
 PyYAML==6.0.2
 requests==2.32.3
